overlays/inventory/ingresses/eworkpermitsit-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: eworkpermitsit-ingress
  annotations:
    nginx.ingress.kubernetes.io/compress-types: "text/css application/javascript application/json"
    nginx.ingress.kubernetes.io/compress-enable: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 50m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 50m
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - eworkpermitsit.doe.go.th
      secretName: doe-go-th-cert-secret

  rules:
    - host: eworkpermitsit.doe.go.th
      http:
        paths:
          - path: /doe/bookingdate
            pathType: Prefix
            backend:
              service:
                name: doe-booking-frontend
                port:
                  number: 3000
          - path: /doe/assets
            pathType: Prefix
            backend:
              service:
                name: doe-booking-frontend
                port:
                  number: 3000
          - path: /doe/vite.svg
            pathType: Prefix
            backend:
              service:
                name: doe-booking-frontend
                port:
                  number: 3000
          - path: /doe/locales
            pathType: Prefix
            backend:
              service:
                name: doe-booking-frontend
                port:
                  number: 3000
